fix z-index and remove bullet pojt from contanct page

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ canvas {
   width: 100%;
   height: 100%;
   /* max-width: 960px; */
-  z-index: 1;
+  z-index: -1;
   position: absolute;
   top: 0;
   
@@ -229,7 +229,9 @@ p {
   color: white;
 }
 
-
+li {
+  list-style: none;
+}
 
 /*--------------footer------------*/
 footer {
